infrastructure/controllers/longhorn/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn
  labels:
    - allow-internal-gateway: "true"
