infrastructure/controllers/longhorn/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: longhorn
spec:
  parentRefs:
    - name: internal
      namespace: infrastructure
  hostnames:
    - longhorn.cloud.theoraime.com
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
